--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -4,38 +4,38 @@
     <string name="search">Buscar</string>
     <string name="save_as">Desar com</string>
     <string name="file_saved">Arxiu desat amb éxit</string>
-    <string name="invalid_file_format">Format d'arxiu no vàlid</string>
+    <string name="invalid_file_format">Format d\'arxiu no vàlid</string>
     <string name="out_of_memory_error">Error: sense memòria</string>
     <string name="an_error_occurred">Ha ocorregut un error: %s</string>
     <string name="open_with">Obrir amb</string>
-    <string name="no_app_found">No s'ha trobat una aplicació vàlida</string>
+    <string name="no_app_found">No s\'ha trobat una aplicació vàlida</string>
     <string name="set_as">Establir com</string>
     <string name="value_copied_to_clipboard">Valor copiat al portaretalls</string>
     <string name="unknown">Desconegut</string>
 
     <!-- Filters -->
     <string name="filter">Filtrar</string>
-    <string name="no_items_found">No s'ha trobat arxius.</string>
+    <string name="no_items_found">No s\'ha trobat arxius.</string>
     <string name="change_filter">Canviar filtres</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">Es requereix permís d'accés a l'emmagatzematge</string>
-    <string name="no_contacts_permission">Es requereix permís d'accés als contactes</string>
-    <string name="no_camera_permissions">Es requereix permís d'accés a la càmera</string>
-    <string name="no_audio_permissions">Es requereix permís d'accés a l'audio</string>
+    <string name="no_storage_permissions">Es requereix permís d\'accés a l\'emmagatzematge</string>
+    <string name="no_contacts_permission">Es requereix permís d\'accés als contactes</string>
+    <string name="no_camera_permissions">Es requereix permís d\'accés a la càmera</string>
+    <string name="no_audio_permissions">Es requereix permís d\'accés a l\'audio</string>
 
     <!-- Renaming -->
-    <string name="rename_file">Canviar el nom de l'arxiu</string>
+    <string name="rename_file">Canviar el nom de l\'arxiu</string>
     <string name="rename_folder">Canviar el nom de la carpeta</string>
-    <string name="rename_file_error">No s'ha pogut canviar el nom de l'arxiu</string>
-    <string name="rename_folder_error">No s'ha pogut canviar el nom de la carpeta</string>
+    <string name="rename_file_error">No s\'ha pogut canviar el nom de l\'arxiu</string>
+    <string name="rename_folder_error">No s\'ha pogut canviar el nom de la carpeta</string>
     <string name="rename_folder_empty">El no de la carpeta no pot ser buit</string>
     <string name="rename_folder_exists">Ja existeix una carpeta amb aquest nom</string>
-    <string name="rename_folder_root">No es pot canviar el nom de la carpeta arrel de l'emmagatzematge</string>
+    <string name="rename_folder_root">No es pot canviar el nom de la carpeta arrel de l\'emmagatzematge</string>
     <string name="rename_folder_ok">Carpeta canviada de nom correctament</string>
     <string name="renaming_folder">Canviant el nom de la carpeta</string>
-    <string name="filename_cannot_be_empty">El nom de l'arxiu no pot ser buit</string>
-    <string name="filename_invalid_characters">El nom de l'arxiu conté caràcters no vàlids</string>
+    <string name="filename_cannot_be_empty">El nom de l\'arxiu no pot ser buit</string>
+    <string name="filename_invalid_characters">El nom de l\'arxiu conté caràcters no vàlids</string>
     <string name="extension_cannot_be_empty">La extensió no pot estar buida</string>
 
     <!-- Copy / Move -->
@@ -51,18 +51,18 @@
     <string name="invalid_destination">No es pot escriure al destí triat</string>
     <string name="please_select_destination">Si us plau tria un destí</string>
     <string name="source_and_destination_same">Origen i destí no poden ser iguals</string>
-    <string name="copy_failed">No s'ha pogut copiar els arxius</string>
+    <string name="copy_failed">No s\'ha pogut copiar els arxius</string>
     <string name="copying">Copiant&#8230;</string>
     <string name="copying_success">Arxius copiats correctament</string>
     <string name="copy_move_failed">Ha ocorregut un error</string>
     <string name="moving">Movent&#8230;</string>
     <string name="moving_success">Arxius moguts correctament</string>
-    <string name="moving_success_partial">Alguns arxius no s'han pogut moure</string>
-    <string name="copying_success_partial">Alguns arxius no s'han pogut copiar</string>
+    <string name="moving_success_partial">Alguns arxius no s\'han pogut moure</string>
+    <string name="copying_success_partial">Alguns arxius no s\'han pogut copiar</string>
     <string name="no_files_selected">No hi ha elements seleccionats</string>
     <string name="saving">Desant&#8230;</string>
     <string name="could_not_create_folder">No es pot crear la carpeta %s</string>
-    <string name="could_not_create_file">No es pot crear l'arxiu %s</string>
+    <string name="could_not_create_file">No es pot crear l\'arxiu %s</string>
 
     <!-- Create new -->
     <string name="create_new">Crear nova</string>
@@ -198,12 +198,12 @@
     <string name="fingerprint">Empremta digital</string>
     <string name="add_fingerprint">Afegeix Empremta digital</string>
     <string name="place_finger">Si us plau posa el teu dit al sensor d’empremta digital</string>
-    <string name="authentication_failed">L'autenticació ha fallat</string>
-    <string name="authentication_blocked">L'autenticació està bloquejada. Prova-ho d’aquí un moment</string>
+    <string name="authentication_failed">L\'autenticació ha fallat</string>
+    <string name="authentication_blocked">L\'autenticació està bloquejada. Prova-ho d’aquí un moment</string>
     <string name="no_fingerprints_registered">No tens empremtes digitals registrades. Afegeix-ne alguna a la configuració del dispositiu</string>
     <string name="go_to_settings">Anar als ajustaments</string>
-    <string name="protection_setup_successfully">Configuració de la contrasenya amb èxit. Torneu a instal·lar l'aplicació en cas que l'oblideu.</string>
-    <string name="fingerprint_setup_successfully">Configuració de la protecció amb èxit. Torneu a instal·lar l'aplicació en cas de problemes amb restablir-la.</string>
+    <string name="protection_setup_successfully">Configuració de la contrasenya amb èxit. Torneu a instal·lar l\'aplicació en cas que l\'oblideu.</string>
+    <string name="fingerprint_setup_successfully">Configuració de la protecció amb èxit. Torneu a instal·lar l\'aplicació en cas de problemes amb restablir-la.</string>
 
     <!-- Times -->
     <plurals name="seconds">
@@ -232,7 +232,7 @@
     <string name="password_protect_hidden_items">Contrasenya per protegir els mitjans amagats</string>
     <string name="password_protect_whole_app">Contrasenya per protegir tota l’aplicació</string>
     <string name="keep_last_modified">Mantenir el valor de la darrera modificació al copiar/moure/canviar el nom dels arxius</string>
-    <string name="show_info_bubble">Mostra una bombolla d'informació en elements de desplaçament mitjançant arrossegament de la barra de desplaçament</string>
+    <string name="show_info_bubble">Mostra una bombolla d\'informació en elements de desplaçament mitjançant arrossegament de la barra de desplaçament</string>
 
     <!-- About -->
     <string name="about">Sobre</string>
@@ -243,7 +243,7 @@
     <string name="invite_friends_underlined"><u>Convida a amics</u></string>
     <string name="share_text">Hola, vine i mira %1$s a %2$s</string>
     <string name="invite_via">Convida amb</string>
-    <string name="rate_us_underlined"><u>vota'ns a Play Store</u></string>
+    <string name="rate_us_underlined"><u>vota\'ns a Play Store</u></string>
     <string name="donate">Donar</string>
     <string name="donate_underlined"><u>Donar</u></string>
     <string name="follow_us">Segueix-nos</string>
@@ -254,7 +254,7 @@
     <string name="donate_please">
         <![CDATA[
             Hola,<br><br>
-            Esperem que gaudiu de l'aplicació. No conté cap anunci, així que si us plau, ajudeu el seu desenvolupament comprant la aplicació <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>, també evitarà que aquest diàleg es torni a mostrar.<br><br>
+            Esperem que gaudiu de l\'aplicació. No conté cap anunci, així que si us plau, ajudeu el seu desenvolupament comprant la aplicació <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>, també evitarà que aquest diàleg es torni a mostrar.<br><br>
             Podeu trobar més opcions de donació <a href="http://simplemobiletools.com/donate">aquí</a>.<br><br>
             Gràcies!
         ]]>
