add the song title to Properties dialog

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -119,6 +119,7 @@
     <string name="f_number">F-číslo</string>
     <string name="camera">Fotoaparát</string>
     <string name="exif">EXIF</string>
+    <string name="song_title">Song title</string>
 
     <!-- Color customization -->
     <string name="background_color">Barva pozadí</string>
