--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -119,6 +119,7 @@
     <string name="f_number">Blendenzahl</string>
     <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
+    <string name="song_title">Song title</string>
 
     <!-- Color customization -->
     <string name="background_color">Hintergrundfarbe</string>
