--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -119,6 +119,7 @@
     <string name="f_number">絞り値</string>
     <string name="camera">カメラ名</string>
     <string name="exif">EXIF</string>
+    <string name="song_title">Song title</string>
 
     <!-- Color customization -->
     <string name="background_color">背景色</string>
