--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -120,6 +120,7 @@
     <string name="f_number">Otwór względny obiektywu</string>
     <string name="camera">Kamera/aparat</string>
     <string name="exif">Dane EXIF</string>
+    <string name="song_title">Song title</string>
 
     <!-- Color customization -->
     <string name="background_color">Tło</string>
