--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -120,6 +120,7 @@
     <string name="f_number">Clonové číslo</string>
     <string name="camera">Fotoaparát</string>
     <string name="exif">EXIF</string>
+    <string name="song_title">Názov skladby</string>
 
     <!-- Color customization -->
     <string name="background_color">Farba pozadia</string>
