--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -119,6 +119,7 @@
     <string name="f_number">Ouverture</string>
     <string name="camera">Caméra</string>
     <string name="exif">EXIF</string>
+    <string name="song_title">Song title</string>
 
     <!-- Color customization -->
     <string name="background_color">Couleur d\'arrière-plan</string>
