--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -120,6 +120,7 @@
     <string name="f_number">F-broj</string>
     <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
+    <string name="song_title">Song title</string>
 
     <!-- Color customization -->
     <string name="background_color">Boja pozadine</string>
