--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -119,6 +119,7 @@
     <string name="f_number">Diafragmagetal</string>
     <string name="camera">Camera</string>
     <string name="exif">EXIF</string>
+    <string name="song_title">Song title</string>
 
     <!-- Color customization -->
     <string name="background_color">Achtergrondkleur</string>
