--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -236,6 +236,17 @@
     <string name="keep_last_modified">當檔案複製/移動/重新命名時，保留舊的「最後修改」數值</string>
     <string name="show_info_bubble">拖曳滾動條時，顯示訊息氣泡</string>
 
+    <!-- Import / Export -->
+    <string name="importing">Importing…</string>
+    <string name="exporting">Exporting…</string>
+    <string name="import_successful">Import successful</string>
+    <string name="export_successful">Export successful</string>
+    <string name="importing_failed">Importing failed</string>
+    <string name="exporting_failed">Exporting failed</string>
+    <string name="importing_some_entries_failed">Importing some entries failed</string>
+    <string name="exporting_some_entries_failed">Exporting some entries failed</string>
+    <string name="no_entries_for_exporting">No entries for exporting have been found</string>
+
     <!-- About -->
     <string name="about">關於</string>
     <string name="website_label">觀看原始碼</string>
