--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -243,10 +243,10 @@
     <!-- Import / Export -->
     <string name="importing">Importovanie…</string>
     <string name="exporting">Exportovanie…</string>
-    <string name="import_successful">Import bol úspešný</string>
-    <string name="export_successful">Export bol úspešný</string>
-    <string name="importing_failed">Import zlyhal</string>
-    <string name="exporting_failed">Export zlyhal</string>
+    <string name="importing_successful">Importovanie bolo úspešné</string>
+    <string name="exporting_successful">Exportovanie bolo úspešné</string>
+    <string name="importing_failed">Importovanie zlyhalo</string>
+    <string name="exporting_failed">Exportovanie zlyhalo</string>
     <string name="importing_some_entries_failed">Importovanie niektorých položiek zlyhalo</string>
     <string name="exporting_some_entries_failed">Exportovanie niektorých položiek zlyhalo</string>
     <string name="no_entries_for_exporting">Nenašli sa žiadne položky pre export</string>
