--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -239,8 +239,8 @@
     <!-- Import / Export -->
     <string name="importing">Importerer…</string>
     <string name="exporting">Eksporterer…</string>
-    <string name="import_successful">Import successful</string>
-    <string name="export_successful">Export successful</string>
+    <string name="importing_successful">Importing successful</string>
+    <string name="exporting_successful">Exporting successful</string>
     <string name="importing_failed">Importing failed</string>
     <string name="exporting_failed">Exporting failed</string>
     <string name="importing_some_entries_failed">Importing some entries failed</string>
