--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -119,7 +119,7 @@
     <string name="f_number">光圈</string>
     <string name="camera">相机</string>
     <string name="exif">EXIF</string>
-    <string name="song_title">Song title</string>
+    <string name="song_title">歌曲标题</string>
 
     <!-- Color customization -->
     <string name="background_color">背景色</string>
@@ -237,15 +237,15 @@
     <string name="show_info_bubble">拖动滚动条时在滚动项目旁显示一个信息气泡</string>
 
     <!-- Import / Export -->
-    <string name="importing">Importing…</string>
-    <string name="exporting">Exporting…</string>
-    <string name="importing_successful">Importing successful</string>
-    <string name="exporting_successful">Exporting successful</string>
-    <string name="importing_failed">Importing failed</string>
-    <string name="exporting_failed">Exporting failed</string>
-    <string name="importing_some_entries_failed">Importing some entries failed</string>
-    <string name="exporting_some_entries_failed">Exporting some entries failed</string>
-    <string name="no_entries_for_exporting">No entries for exporting have been found</string>
+    <string name="importing">正在导入...</string>
+    <string name="exporting">正在导出...</string>
+    <string name="importing_successful">导入成功</string>
+    <string name="exporting_successful">导出成功</string>
+    <string name="importing_failed">导入失败</string>
+    <string name="exporting_failed">导出失败</string>
+    <string name="importing_some_entries_failed">部分项目导入失败</string>
+    <string name="exporting_some_entries_failed">部分项目导出失败</string>
+    <string name="no_entries_for_exporting">未找到要导出的项目</string>
 
     <!-- About -->
     <string name="about">关于</string>
