--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -239,13 +239,13 @@
     <!-- Import / Export -->
     <string name="importing">Importeren…</string>
     <string name="exporting">Exporteren…</string>
-    <string name="importing_successful">Importing successful</string>
-    <string name="exporting_successful">Exporting successful</string>
-    <string name="importing_failed">Importing failed</string>
-    <string name="exporting_failed">Exporting failed</string>
-    <string name="importing_some_entries_failed">Importing some entries failed</string>
-    <string name="exporting_some_entries_failed">Exporting some entries failed</string>
-    <string name="no_entries_for_exporting">No entries for exporting have been found</string>
+    <string name="importing_successful">Importeren voltooid</string>
+    <string name="exporting_successful">Exporteren voltooid</string>
+    <string name="importing_failed">Importeren mislukt</string>
+    <string name="exporting_failed">Exporteren mislukt</string>
+    <string name="importing_some_entries_failed">Sommige items konden niet worden geïmporteerd</string>
+    <string name="exporting_some_entries_failed">Sommige items konden niet worden geëxporteerd</string>
+    <string name="no_entries_for_exporting">Er zijn geen items gevonden om te exporteren</string>
 
     <!-- About -->
     <string name="about">Over</string>
