--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -119,7 +119,7 @@
     <string name="f_number">F-number</string>
     <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
-    <string name="song_title">Song title</string>
+    <string name="song_title">Sangtitel</string>
 
     <!-- Color customization -->
     <string name="background_color">Baggrundsfarve</string>
