--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -245,7 +245,7 @@
     <string name="exporting_failed">Exporting failed</string>
     <string name="importing_some_entries_failed">Importing some entries failed</string>
     <string name="exporting_some_entries_failed">Exporting some entries failed</string>
-    <string name="no_entries_for_exporting">No entries for exporting have been found</string>
+    <string name="no_entries_for_exporting">Der er ikke fundet indhold til eksport</string>
 
     <!-- About -->
     <string name="about">Om</string>
@@ -281,19 +281,19 @@
     <string name="subsampling_title">Subsampling Scale Image View (zoomable imageviews)</string>
     <string name="glide_title">Glide (image loading and caching)</string>
     <string name="picasso_title">Picasso (image loading and caching)</string>
-    <string name="cropper_title">Android Image Cropper (image crop and rotate)</string>
-    <string name="multiselect_title">RecyclerView MultiSelect (selecting multiple list items)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
-    <string name="joda_title">Joda-Time (Java date replacement)</string>
+    <string name="cropper_title">Android Image Cropper (beskær og roter billede)</string>
+    <string name="multiselect_title">RecyclerView MultiSelect (vælger flere elementer)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (højre til venstre-swiping)</string>
+    <string name="joda_title">Joda-Time (Java-dato-erstatning)</string>
     <string name="stetho_title">Stetho (debugging databases)</string>
     <string name="otto_title">Otto (event bus)</string>
-    <string name="photoview_title">PhotoView (zoomable GIFs)</string>
-    <string name="pattern_title">PatternLockView (pattern protection)</string>
-    <string name="reprint_title">Reprint (fingerprint protection)</string>
-    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
+    <string name="photoview_title">PhotoView (zoombare GIF'er)</string>
+    <string name="pattern_title">PatternLockView (mønsterbeskyttelse)</string>
+    <string name="reprint_title">Reprint (beskyttelse af fingeraftryk)</string>
+    <string name="gif_drawable_title">Gif Drawable (indlæser GIF'er)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
-    <string name="robolectric_title">Robolectric (testing framework)</string>
-    <string name="espresso_title">Espresso (testing helper)</string>
+    <string name="robolectric_title">Robolectric (tester framework)</string>
+    <string name="espresso_title">Espresso (tester helper)</string>
     <string name="gson_title">Gson (JSON parser)</string>
     <string name="leak_canary_title">Leak Canary (memory leak detector)</string>
 </resources>
