add a BufferedWriter extension for write line

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -287,10 +287,10 @@
     <string name="joda_title">Joda-Time (Java-dato-erstatning)</string>
     <string name="stetho_title">Stetho (debugging databases)</string>
     <string name="otto_title">Otto (event bus)</string>
-    <string name="photoview_title">PhotoView (zoombare GIF'er)</string>
+    <string name="photoview_title">PhotoView (zoombare GIF\'er)</string>
     <string name="pattern_title">PatternLockView (mønsterbeskyttelse)</string>
     <string name="reprint_title">Reprint (beskyttelse af fingeraftryk)</string>
-    <string name="gif_drawable_title">Gif Drawable (indlæser GIF'er)</string>
+    <string name="gif_drawable_title">Gif Drawable (indlæser GIF\'er)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
     <string name="robolectric_title">Robolectric (tester framework)</string>
     <string name="espresso_title">Espresso (tester helper)</string>
